app/containers/snippet/index.scss
.font-style-base {
  font-family: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI, Ubuntu, Droid Sans, sans-serif;
  font-size: 14px;
}

.font-style-md {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 13px;
}

.snippet-box {

  .header-table {
    width: 100%;
    display: table;
  }

  .line {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .welcome-section {
    @extend .font-style-base;
  }

  .header-title {
    @extend .font-style-base;
    font-size: 13px;
    text-transform: uppercase;
  }

  .header-controls {
    display: flex;
    align-items: center;
  }

  .snippet-control {
    @extend .font-style-base;
    margin-left: 15px;
    height: 20px;
    width: 20px;
    display: block;
    position: relative;

    svg {
      display: block;
      position: absolute;
      top: 50%;
      left: 50%;
      height: 28px;
      width: 28px;
      transform: translate(-50%, -50%);
      fill: #6b6a6f;
      transition: fill .15s;
    }

    &:hover svg {
      fill: #2E2C33;
    }
  }

  .customized-button {
    @extend .font-style-base;
    margin: 5px 5px 0px 10px;
  }

  .customized-button {
    @extend .font-style-base;
    margin: 5px 5px 0px 10px;
  }

  .snippet-code {
    min-height: 100vh;
    border-color: #dadee3;
    border-radius: 0;
    border-bottom: none;
    margin-bottom: 0;

    & > .panel-heading {
      position: absolute;
      top: 0;
      left: 1px;
      width: 100%;
      z-index: 5;
      background-color: #fff;
      border: none!important;
      color: inherit;
      padding: 12px 15px;

      &:after {
        content: '';
        position: absolute;
        height: 7px;
        bottom: -7px;
        left: 0;
        right: 0;
        box-shadow: rgba(55, 55, 55, .3) 0 7px 7px -7px inset;
      }
    }
  }

  .panel-body {
    margin-top: 55px;
    padding: 0;
  }

  .snippet-description {
    @extend .font-style-base;
    padding: 0 15px 7px;
  }

  .code-table {
    font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
    font-size: 13px !important;
  }

  .code-area {
    @extend .font-style-base;
    border: 0px;
    border-bottom: 1px solid #dadee3;
  }

  pre {
    padding: 8px 12px 5px 2px;
    margin: 0 0 10px;
    background-color: #fff;
    border: none;
    border-radius: 0;
    font-size: 13px;
  }

  .file-header {
    @extend .font-style-base;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 8px 12px;
    background-color: #f6f5f6;
    border-top: 1px solid #dadee3;
    border-bottom: 1px solid #dadee3;
  }

  .file-expand {
    font-size: 15px;

    &.is-expanded .expand-icon {
      transform: rotate(90deg);
    }

    span {
      display: inline-block;
      vertical-align: middle;
    }
  }

  .expand-icon {
    display: inline-block;
    vertical-align: middle;
    position: relative;
    top: 1px;
    width: 19px;
    height: 19px;
    margin-right: 3px;
    transition: transform .15s ease;
  }

  .file-header-control {

    &:not(:last-child) {
      margin-right: 10px;
    }
  }

  .file-header-md {
    @extend .file-header;
    // background: rgba(0,0,0,0.03);
    // border: rgb(204,204,204) 1px solid;
    // border-radius: 5px 5px 0px 0px;
    // padding: 10px 10px 10px 10px;
    // margin-bottom: -1px;
  }

  .customized-button-file-header {
    @extend .customized-button;
    margin-top: 2px;
  }

  .title-section {
    @extend .font-style-base;
    font-size: 25px;
    font-weight: normal;
    margin-bottom: 7px;
    padding-right: 15px;
    margin-bottom: 3px;
  }

  .description-section {
    @extend .font-style-base;
    color: #787282;
  }

  .custom-tags-section {
    margin-top: 15px;

    &:after {
      content: '';
      display: table;
      clear: both;
    }
  }

  .custom-tags,
  .update-date {
    @extend .font-style-base;
    color: #787282;
    font-size: 12px;
    font-style: italic;
  }

  .custom-tags {
    float: left;

    span {
      display: inline-block;
      vertical-align: middle;
    }
  }

  .custom-tags-icon {
    display: inline-block;
    vertical-align: middle;
    height: 16px;
    width: 16px;
    margin-right: 2px;
    position: relative;
  }

  .update-date {
    float: right;
  }

  .snippet-progressbar {
    height: 3px;
    margin-top: 20px;
  }

  .line-number {
    text-align: right;
    padding-right: 20px;
    display: inline-block;
    color: rgba(0,0,0,0.25);
    width: 40px;
    font-size: 12px;
    font-style: normal;
    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  }

  .markdown-section {
    @extend .font-style-md;
    // border: 1px solid rgb(204, 204, 204);
    padding: 15px 20px;
    // border-radius: 0 0 5px 5px;

    pre {
      font-size: 13px !important;
    }
  }

  hr {
    margin-top: 0 !important;
    margin-bottom: 7px !important;
    border: none !important;
  }
}

.edit-modal {
  width: 90vw;
}

.raw-modal {
  .modal-dialog {
    width: 90vw !important;
  }

  .copy-raw-link {
    @extend .font-style-base;
    margin-top: 2px;
    margin-right: 30px;
    float: right;
  }

  .modal-content {
    @extend .font-style-base;
    min-height: 300px;
    white-space: nowrap;
    overflow: auto;
  }

  .code-area-raw {
    @extend .font-style-base;
    width: 100%;
    min-height: 550px;
    white-space: pre-wrap;
    border: 0px;
  }
}

// CSS technique to disable the line numbers from being selected
// http://codepen.io/danoc/pen/ByGKZv
[data-pseudo-content]::before,
[data-pseudo-content--before]::before,
[data-pseudo-content--after]::after {
  content: attr(data-pseudo-content);
}
/* ... */

